--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -6,12 +6,12 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
 
-                         <li class="key-account fright"> 
-                            <a href="#" data-toggle="modal" data-target="#key-account">
-                                <div class="ka-image"><img src="img/a6.jpg" class="img-circle" alt="image" width="35" heigth="35"></div>
+                         <li class="key-account fright" ng-if="isclient"> 
+                            <a data-toggle="modal" data-target="#key-account">
+                                <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
                                 <div class="ka-name">
-                                    <span class="ka-span-1">Janine Bronzino <i class="fa fa-angle-down"></i></span>
-                                    <span class="ka-span-2">+49 231 123 456 7</span>
+                                    <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}}<i class="fa fa-angle-down"></i></span>
+                                    <span class="ka-span-2">{{keyaccount.tel}}</span>
                                 </div>
                                 <div class="clear-both"></div>
                             </a>
@@ -20,5 +20,30 @@
                         
                     </ul>
                 </nav>
+                <!--modal key account-->
+                <div class="modal inmodal fade" id="key-account" role="dialog"  aria-hidden="true">
+                    <div class="modal-dialog modal-m">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                <h4 class="modal-title"><i class="fa fa-user modal-fa-icon"></i> Your Contact Person</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="row mb10 acenter">
+                                    <div class="col-lg-12">
+                                        <img width="70" heigth="70" alt="image" class="img-circle" src="{{keyaccount.photo}}">
+                                        <h2 class="mb0 bold">{{keyaccount.name}} {{keyaccount.surname}}</h2>
+                                        <h2 class="mt10">{{keyaccount.tel}}</h2>
+                                        <h2 class="mt10"><a href="" class="fxwlink">{{keyaccount.email}}</a></h2>
+                                    </div>
+                                </div><!--row-->
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+    </div>
+
             </div>
             <!--end top header-->
