--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -17,7 +17,7 @@
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-12">
                     <h2><i class="fa fa fa-building"></i> Client</h2>
-                    <ol class="breadcrumb">
+                    <ol class="breadcrumb" ng-if="!isadmin">
                         <li>
                             flexwork.io
                         </li>
@@ -25,28 +25,35 @@
                             Client
                         </li>
                     </ol>
+                    <ol class="breadcrumb" ng-if="isadmin">
+                        <li>
+                            administrator
+                        </li>
+                        <li>
+                            clients
+                        </li>
+                    </ol>
                 </div>
             </div>
             <!--end header title-->
     <!--main content-->
-            <div class="wrapper wrapper-content animated fadeInRight ecommerce">
-                <div class="ibox-content m-b-sm border-bottom">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <button ng-click="OpenCreateModal(null)" type="button" class="btn btn-primary btn-bitbucket"><i class="fa fa-plus"></i> Add Client</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-12">
+                    <div class="wrapper wrapper-content animated fadeInUp">
+
+                        <!-- buttons & team -->
+                        <div class="row mb20">
+                            <div class="col-md-12">
+                                <button class="btn btn-primary btn-bitbucket btn-m mr5" type="button" ng-click="OpenCreateModal(null)"><i class="fa fa-plus mr5"></i> add client</button>
+                            </div>
+                        </div>
                     <div class="ibox">
                         <div class="ibox-content">
 
                              <input type="text" class="form-control input-sm m-b-xs" id="filter"
-                                   placeholder="Search in table">
+                                   placeholder="Search in table" ng-if="!isadmin">
 
-                            <table class="footable table table-stripped" data-page-size="10" data-filter=#filter>
+                            <table class="footable table table-stripped" data-page-size="10" data-filter=#filter ng-if="!isadmin">
                                 <thead>
                                 <tr>
                                     <th data-hide="phone" data-sort-ignore="true" width="100">ID</th>
@@ -118,11 +125,54 @@
                                 </tr>
                                 </tfoot>
                             </table>
+                            <table class="table table-hover" ng-if="isadmin">
+                                <tbody>
+                                <tr>
+                                    <td width="50" class="project-table-head"></td>
+                                    <td width="150" class="project-table-head">ID</td>
+                                    <td width="600" class="project-table-head">Title</td>
+                                    <td width="600" class="project-table-head">Projcts / Tickets</td>
+                                    <td width="150" class="project-table-head">Users</td>
+                                    <td width="450" class="project-table-head">Assign to</td>
+                                    <td width="600" class="project-table-head aright">Action</td>
+                                </tr>
+
+                                <tr ng-repeat="client in customers">
+                                    <td class="project-type">
+                                        <i class="fa fa-angle-right"></i>
+                                    </td>
+                                    <td class="project-id">
+                                        {{client.id}}
+                                    </td>
+                                    <td class="project-title">
+                                        <a href="client-admin-adnatives-project-details-fxw.html">{{client.companyname}}</a>
+                                        <small>created at {{client.creationdate}}</small>
+                                    </td>
+                                    <td class="project-client-projects">
+                                        <i class="fa fa-clone"></i><span class="client-projects">{{client.projectNumber}} Projects</span>  
+                                        <i class="fa fa-angle-right ml5"></i><span class="client-tickets">{{client.ticketnumber}} Tickets</span>
+                                    </td>
+                                    <td class="project-status">
+                                        <a class="btn btn-default btn-xs"><i class="fa fa-users"></i> {{client.userNumber}}</a>
+                                    </td>
+                                    <td class="notification-avatar"><img src="{{client.keyaccount.photo}}" class="img-circle mr5" alt="image"> {{client.keyaccount.name}}  {{client.keyaccount.surname}}</td>
+                                    <td class="project-actions">
+                                        <button type="button" class="btn btn-white btn-sm" ng-click="OpenCreateModal(client)"><i class="fa fa-pencil"></i> </button>
+                                        <a href="#/clientprojects?cid={{client.id}}" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
+                                        <a href="index.html" class="btn btn-default btn-sm" target="_blank"><i class="fa fa-sign-in"></i></a>
+                                    </td> 
+                                </tr>
+
+                                
+                                                                                    
+                                </tbody>
+                            </table>
 
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
             <!--end main content-->
 
             <!--footer-->
@@ -185,7 +235,7 @@
                             </div> 
                             <div class="form-group">
                                 <div class="select-option m-0" style="width: 100%;">
-                                    <select class="select2" ng-model="country">
+                                    <select class="select2" ng-model="country" id="countryselect">
                                         <option>Country</option>
                                         <option>Turkey</option>
                                         <option>Tunisia</option>
@@ -241,7 +291,7 @@
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="checkbox checkbox-primary mt-5 mb-5">
-                                    <input type="checkbox" id="checkbox3" ng-model="isSent">
+                                    <input type="checkbox" id="checkbox3" ng-model="isSent" value="true" ng-change="stateChanged()">
                                     <label for="checkbox3">Send login information to user</label>
                                 </div>
                             </div>
