--- a/app/partials/memberprofile.html
+++ b/app/partials/memberprofile.html
@@ -425,7 +425,7 @@
                                     <select class="select2" ng-model="role" ng-change="hideoptions()" id="roleselect">
                                         <option>Role</option>
                                         <option>keyaccount</option>
-                                        <option>Teamleader</option>
+                                        <option>Teamlead</option>
                                         <option>Developer</option>
                                         <option>Tester</option>
                                         <option>Designer</option>
