--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -2,7 +2,7 @@
             <div class="row border-bottom" ng-controller="MenuNavCtrl">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
-                        <a class="navbar-minimalize minimalize-styl-2 btn btn-primary "><i class="fa fa-bars"></i> </a>
+                        <a href="" class="navbar-minimalize minimalize-styl-2 btn btn-primary"><i class="fa fa-bars"></i> </a>
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
 
@@ -10,7 +10,7 @@
                             <a data-toggle="modal" data-target="#key-account">
                                 <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
                                 <div class="ka-name">
-                                    <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}}<i class="fa fa-angle-down"></i></span>
+                                    <span class="ka-span-1">{{keyaccount.surname}} {{keyaccount.name}}<i class="fa fa-angle-down"></i></span>
                                     <span class="ka-span-2">{{keyaccount.tel}}</span>
                                 </div>
                                 <div class="clear-both"></div>
