--- a/app/partials/team.html
+++ b/app/partials/team.html
@@ -298,8 +298,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title"><i class="fa fa-user-plus modal-fa-icon" ng-if="!isedit"></i> Add Member</h4>
-                    <h4 class="modal-title"><i class="fa fa-user-plus modal-fa-icon" ng-if="isedit"></i> Edit Member</h4>
+                    <h4 class="modal-title" ng-if="!isedit"><i class="fa fa-user-plus modal-fa-icon" ></i> Add Member</h4>
+                    <h4 class="modal-title" ng-if="isedit"><i class="fa fa-user-plus modal-fa-icon" ></i> Edit Member</h4>
                 </div>
                 <div class="modal-body">
                      <div class="row">
@@ -355,7 +355,7 @@
                                     <select class="select2" ng-model="role" ng-change="hideoptions()" id="roleselect">
                                         <option>Role</option>
                                         <option>keyaccount</option>
-                                        <option>Teamleader</option>
+                                        <option>Teamlead</option>
                                         <option>Developer</option>
                                         <option>Tester</option>
                                         <option>Designer</option>
