--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -717,7 +717,7 @@
                                                                 <i class="fa fa-angle-right"></i>
                                                             </td>
                                                             <td class="project-id">
-                                                                {{task.displayId}}
+                                                                {{task.displayid}}
                                                             </td>
                                                             <td class="project-title">
                                                                 {{task.title}}
@@ -734,7 +734,7 @@
                                                             <td class="project-status">
                                                                  <span class="label label-default label-nobg" ng-if="!task.isstarted"><i class="fa fa-genderless"></i> waiting</span>
                                                                   <span class="label label-default label-nobg" ng-if="task.isstarted && !task.finished"><i class="fa fa-genderless"></i> production</span>
-                                                                   <span class="label label-default label-nobg" ng-if="task.isstarted && !task.finished"><i class="fa fa-genderless"></i> production</span>
+                                                                   
                                                                    <span class="label label-default label-nobg" ng-if="task.isstarted && task.finished"><i class="fa fa-check"></i>  finished</span>
                                                             </td>
                                                         </tr>
@@ -786,7 +786,7 @@
                                                                 <i class="fa fa-angle-right"></i>
                                                             </td>
                                                             <td class="project-id">
-                                                                {{task.displayId}}
+                                                                {{task.displayid}}
                                                             </td>
                                                             <td class="project-title">
                                                                 {{task.title}}
@@ -854,7 +854,7 @@
                                                                 <i class="fa fa-angle-right"></i>
                                                             </td>
                                                             <td class="project-id">
-                                                                {{task.displayId}}
+                                                                {{task.displayid}}
                                                             </td>
                                                             <td class="project-title">
                                                                 {{task.title}}
@@ -914,7 +914,7 @@
                                                                 <i class="fa fa-angle-right"></i>
                                                             </td>
                                                             <td class="project-id">
-                                                                {{task.displayId}}
+                                                                {{task.displayid}}
                                                             </td>
                                                             <td class="project-title">
                                                                 {{task.title}}
