--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -130,15 +130,20 @@
 
                                     <!-- status area -->
                                     <div class="row" ng-if="isTeamLeader || isAdmin">
-                                        <div class="col-lg-12 pt0 pb20">
+                                        <div class="col-lg-12 pt0 pb20" >
                                             <div class="project-details-status-area p10">
                                                 <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Draft.status">
                                                    <span class="label label-default label-nobg"><i class="fa fa-genderless"></i> draft</span>
                                                 </div>
-                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status">
+                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status && ticket_type!=tickettypes[2].type">
                                                    <button class="btn btn-primary btn-bitbucket btn-xs" type="button" ng-click="addStory(null)"><i class="fa fa-plus mr5"></i> add story</button>
                                                    <button type="button" class="btn btn-danger btn-xs" ng-click="sendToClient()"><i class="fa fa-chevron-right"></i> send to client</button>
                                                    <small>client started ticket</small>
+                                                </div>
+                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status && ticket_type==tickettypes[2].type">
+                                                   <button class="btn btn-primary btn-bitbucket btn-xs" type="button" ng-click="addStory(null)"><i class="fa fa-plus mr5"></i> add story</button>
+                                                    <button type="button" class="btn btn-success btn-xs" ng-click="sendToProduction()"><i class="fa fa-chevron-right"></i> send to production</button>
+                                                   <small>send ticket to production</small>
                                                 </div>
                                                  <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Goproduction.status">
                                                    <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> waiting confirmation</span>
@@ -167,7 +172,7 @@
                                                 </div>
                                                 <div class="clear-both"></div>
                                             </div>
-                                        </div>
+                                    </div>
                                     </div>
                                     <div class="row" ng-if="isMember">
                                         <div class="col-lg-12 pt0 pb20">
@@ -175,7 +180,7 @@
                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Draft.status">
                                                     <span class="label label-default label-nobg"><i class="fa fa-genderless"></i> draft</span>
                                                 </div>
-                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status">
+                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status && ticket_type!=tickettypes[2].type">
                                                    <button class="btn btn-primary btn-bitbucket btn-xs" type="button" ng-click="addStory(null)"><i class="fa fa-plus mr5"></i> add story</button>
                                                     <small>client started ticket</small>
                                                 </div>
@@ -304,15 +309,13 @@
                                                              <td class="project-realtime" ng-if="isclient && story.realtime==null">
                                                                
                                                             </td>
-                                                            <td class="project-realtime" ng-if="!isclient && story.finished && story.realtime==null">
+                                                            <td class="project-realtime" ng-if="!isclient && story.realtime==null && ticket_status==ticketStatus.Production.status && story.isstarted">
                                                                 <button ng-click="openAddRealtime(null,story)" type="button" class="btn btn-primary btn-bitbucket btn-xs"><i class="fa fa-plus mr5"></i> add</button>
                                                             </td>
                                                             <td class="project-realtime" ng-if="!isclient && story.finished && story.realtime!=null &&(ticket_status==ticketStatus.Production.status || ticket_status==ticketStatus.Testing.status)">
                                                                  <i class="fa fa-clock-o"></i> 
                                                                 <span class="hour">{{story.realtime}} h</span>
-                                                                <a ng-click="openAddRealtime(story.realtime,story)"><small>edit</small></a>
-                                                            </td>
-                                                             <td class="project-realtime" ng-if="!isclient && !story.finished">
+                                                                
                                                             </td>
                                                               <td class="project-realtime" ng-if="!isclient && story.finished && (ticket_status==ticketStatus.Done.status || ticket_status==ticketStatus.Accept.status || ticket_status==ticketStatus.Reject.status)">
                                                                 <i class="fa fa-clock-o"></i> 
@@ -549,29 +552,7 @@
             </div>
         </div>
 </div>
-<div class="modal inmodal fade" id="add-realtime" role="dialog"  aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title"><i class="fa fa-plus modal-fa-icon"></i> Realtime</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-lg-12"> 
-                            <div class="form-group project-status">
-                                  <input type="number" step="any" class="form-control" placeholder="Real time" ng-model="realtime">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="setRealtime()">save</button>
-                </div>
-            </div>
-        </div>
-</div>
+
 <!--modal see reject messages-->
     <div class="modal inmodal fade" id="reject-messages" role="dialog"  aria-hidden="true">
         <div class="modal-dialog modal-m">
@@ -630,7 +611,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="select-option m-0" style="width:100%;">
-                                       <select class="select2" ng-model="assignto" id="selectassign" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in team track by member.id && member.role.role">
+                                       <select class="select2" ng-model="assignto" id="selectassign" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in team track by member.order">
                                     </select>
                                 </div>
                             </div>
@@ -674,7 +655,7 @@
         </div>
     </div>
     <!--modal upload file-->
-    <div class="modal inmodal fade" id="upload-file" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="upload-file" role="dialog"  aria-hidden="true">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -703,5 +684,98 @@
                 </div>
             </div>
         </div>
+</div>
+<!--add realtime model-->
+<div class="modal inmodal fade in" id="add-realtime" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-md">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title"><i class="fa fa-clock-o modal-fa-icon"></i> add realtime</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row header-ticket-types">
+
+                        <div class="col-lg-12 p15 header-add-member">
+                            <div class="form-group fleft m0 mr10">
+                                <input type="text" placeholder="time(0.0)" class="form-control" ng-model="realtime">
+                            </div>
+                            <div class="form-group m0">
+                                <button class="btn btn-primary" type="button" ng-click="setRealtime()"><i class="fa fa-plus mr5"></i> add</button>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-12 mt20">
+                            <div class="table-responsive">
+                                <table class="table table-hover table-striped notification mb0">
+                                    <thead>
+                                        <tr><th width="100">Name</th>
+                                        <th width="100">Date</th>
+                                        <th width="100">Realtime</th>
+                                        <th width="80" class="aright">Action</th>
+                                    </tr></thead>
+                                    <tbody>
+                                        <tr ng-repeat="realtime in realtimes">
+                                            <td>{{assigned.surname}} {{assigned.name}}</td>
+                                            <td>{{realtime.date}}</td>
+                                            <td>{{realtime.time}} h</td>
+                                            <td class="aright" ng-if="realtime.editable">
+                                                <button type="button" class="btn btn-white btn-sm fxw-alert-delete" role="button" ng-click="deleteRealtime(realtime)s"><i class="fa fa-close"></i></button>
+                                                <button type="button" class="btn btn-white btn-sm" role="button" data-toggle="modal" ng-click="editRealtime(realtime)"><i class="fa fa-pencil"></i></button>
+                                            </td>
+                                             <td class="aright" ng-if="!realtime.editable">
+                                                <button type="button" class="btn btn-white btn-sm fxw-alert-delete" role="button" disabled="disabled"><i class="fa fa-close"></i></button>
+                                                <button type="button" class="btn btn-white btn-sm" role="button" data-toggle="modal" data-target="#edit-realtime" disabled="disabled"><i class="fa fa-pencil"></i></button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="bold">Total</td>
+                                            <td></td>
+                                            <td class="bold">{{totalrealtime}} h</td>
+                                            <td class="aright"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                        </div>
+                        <!-- end table project list-->
+                        <div class="col-lg-12 clear-both aright mt20 mb20 p15 pr20 realtime-info-box">
+                            <span class="realtime-info-text">
+                                <i class="fa fa-info-circle mr5"></i>after saving you can not edit and delete it
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-warning fleft" ng-click="sendToTl()">save &amp; deliver to team lead</button>
+                    <button type="button" class="btn btn-white" data-dismiss="modal">close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">save</button>
+                </div>
+            </div>
+        </div>
+</div>
+  <!--modal edit realtime-->
+    <div class="modal inmodal fade" id="edit-realtime" role="dialog"  aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">close</span></button>
+                    <h4 class="modal-title"><i class="fa fa-pencil modal-fa-icon"></i> edit realtime</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12"> 
+                            <div class="form-group project-status">
+                                <input type="text" placeholder="time(0.0)" class="form-control" ng-model="editrealtime">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" ng-click="seteditRealtime()">save</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <!--end wrapper-->
