fix bug message number (nan)

--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -10,7 +10,7 @@
                             <a data-toggle="modal" data-target="#key-account">
                                 <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
                                 <div class="ka-name">
-                                    <span class="ka-span-1">{keyaccount.name}} {{keyaccount.surname}} {<i class="fa fa-angle-down"></i></span>
+                                    <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}} {<i class="fa fa-angle-down"></i></span>
                                     <span class="ka-span-2">{{keyaccount.tel}}</span>
                                 </div>
                                 <div class="clear-both"></div>
@@ -32,7 +32,7 @@
                                 <div class="row mb10 acenter">
                                     <div class="col-lg-12">
                                         <img width="70" heigth="70" alt="image" class="img-circle" src="{{keyaccount.photo}}">
-                                        <h2 class="mb0 bold">{{keyaccount.surname}} {{keyaccount.name}}</h2>
+                                        <h2 class="mb0 bold">{{keyaccount.name}} {{keyaccount.surname}}</h2>
                                         <h2 class="mt10">{{keyaccount.tel}}</h2>
                                         <h2 class="mt10"><a href="" class="fxwlink">{{keyaccount.email}}</a></h2>
                                     </div>
